--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="vendors/owl-carousel/owl.theme.default.min.css" />
   <link rel="stylesheet" href="vendors/owl-carousel/owl.carousel.min.css" />
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/custom.css">
 </head>
 
 <body>
@@ -85,21 +86,14 @@
             </ul>
 
             <ul class="nav-shop">
-              <!-- <li class="nav-item">
-                <i class="ti-search"></i>
-                <input id="search" type="text" class="input" placeholder="search">
-              </li>
-              <li class="results-container">
-                <i class="results-list" id="list"></i>
-              </li> -->
               <li class="nav-item">
-                <button>
+                <a class='iconCart'>
                   <i class="ti-shopping-cart"></i><span class="nav-shop__circle"></span>
-                </button>
+                </a>
               </li>
-              <li class="nav-item">
-                <!-- <a class="button button-header" href="#">Comprar</a> -->
-              </li>
+              <!-- <li class="nav-item">
+                <a class="button button-header" href="#">Comprar</a>
+              </li> -->
             </ul>
           </div>
         </div>
@@ -123,8 +117,10 @@
               <h4>Los mejores precios siempre</h4>
               <h1>solo 48 horas</h1>
               <p>
-                Bienvenido a nuestra web, donde podrás encontrar los mejores productos, las mejores marcas y los mejores precios. Pero no te esperes demasiado, ya que nuestras ofertas son tan buenas que solo las podemos mantener 48 horas. 
-                No rush!  
+                Bienvenido a nuestra web, donde podrás encontrar los mejores productos, las mejores marcas y los mejores
+                precios. Pero no te esperes demasiado, ya que nuestras ofertas son tan buenas que solo las podemos
+                mantener 48 horas.
+                No rush!
               </p>
               <a class="button button-hero" href="#">Navega ahora</a>
             </div>
@@ -461,7 +457,6 @@
   <script src="js/productos.js"></script>
   <script src="js/controlador-index.js"></script>
   <script src="js/notify.js"></script>
-  <script src="/js/cercador.js"></script>
 </body>
 
 </html>
