--- a/tracking-order.html
+++ b/tracking-order.html
@@ -15,8 +15,8 @@
   <link rel="stylesheet" href="vendors/owl-carousel/owl.carousel.min.css">
   <link rel="stylesheet" href="vendors/nice-select/nice-select.css">
   <link rel="stylesheet" href="vendors/nouislider/nouislider.min.css">
-
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/custom.css">
 </head>
 
 <body>
@@ -67,9 +67,12 @@
 
             <ul class="nav-shop">
               <!-- <li class="nav-item"><button><i class="ti-search"></i></button></li> -->
-              <li class="nav-item"><button><i class="ti-shopping-cart"></i><span
-                    class="nav-shop__circle">3</span></button> </li>
-              <li class="nav-item"><a class="button button-header" href="#">Comprar</a></li>
+              <li class="nav-item">
+                <a class='iconCart'>
+                  <i class="ti-shopping-cart"></i><span class="nav-shop__circle"></span>
+                </a>
+              </li>
+              <!-- <li class="nav-item"><a class="button button-header" href="#">Comprar</a></li> -->
             </ul>
           </div>
         </div>
@@ -210,7 +213,6 @@
     <script src="js/main.js"></script>
     <script src="js/functions.js"></script>
     <script src="js/productos.js"></script>
-    <script src="js/controlador.js"></script>
     <script src="js/notify.js"></script>
 </body>
 
