--- a/blog.html
+++ b/blog.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="vendors/owl-carousel/owl.theme.default.min.css" />
   <link rel="stylesheet" href="vendors/owl-carousel/owl.carousel.min.css" />
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/custom.css">
 </head>
 
 <body>
@@ -89,13 +90,13 @@
                 <button><i class="ti-search"></i></button>
               </li> -->
               <li class="nav-item">
-                <button>
-                  <i class="ti-shopping-cart"></i><span class="nav-shop__circle">3</span>
-                </button>
+                <a class='iconCart'>
+                  <i class="ti-shopping-cart"></i><span class="nav-shop__circle"></span>
+                </a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="button button-header" href="#">Comprar</a>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
@@ -766,9 +767,7 @@
   <script src="js/main.js"></script>
   <script src="js/functions.js"></script>
   <script src="js/productos.js"></script>
-  <script src="js/controlador.js"></script>
   <script src="js/notify.js"></script>
-
 </body>
 
 </html>
