--- a/cart.html
+++ b/cart.html
@@ -92,13 +92,13 @@
                 <button><i class="ti-search"></i></button>
               </li> -->
               <li class="nav-item">
-                <button>
-                  <i class="ti-shopping-cart"></i><span class="nav-shop__circle">3</span>
-                </button>
+                <a class='iconCart'>
+                  <i class="ti-shopping-cart"></i><span class="nav-shop__circle"></span>
+                </a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="button button-header" href="#">Comprar</a>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
