--- a/login.html
+++ b/login.html
@@ -15,8 +15,8 @@
   <link rel="stylesheet" href="vendors/owl-carousel/owl.carousel.min.css" />
   <link rel="stylesheet" href="vendors/nice-select/nice-select.css" />
   <link rel="stylesheet" href="vendors/nouislider/nouislider.min.css" />
-
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/custom.css">
 </head>
 
 <body>
@@ -92,13 +92,13 @@
                 <button><i class="ti-search"></i></button>
               </li> -->
               <li class="nav-item">
-                <button>
-                  <i class="ti-shopping-cart"></i><span class="nav-shop__circle">3</span>
-                </button>
+                <a class='iconCart'>
+                  <i class="ti-shopping-cart"></i><span class="nav-shop__circle"></span>
+                </a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="button button-header" href="#">Comprar</a>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
@@ -279,7 +279,6 @@
   <script src="js/main.js"></script>
   <script src="js/functions.js"></script>
   <script src="js/productos.js"></script>
-  <script src="js/controlador.js"></script>
   <script src="js/notify.js"></script>
 </body>
 
